corpus/balance.txt
=====
Simple Balance
=====

2012-12-12 balance Assets:Test 50.00 EUR

---

(beancount_file
 (balance
  date: (date)
  account: (account)
  amount: (amount
      (number)
      (currency))))

=====
Balance with computation
=====

2012-12-12 balance Assets:Test ( 50.00 / 2 ) * 2  EUR

---

(beancount_file
 (balance
  date: (date)
  account: (account)
  amount: (amount
      (binary_num_expr
       (binary_num_expr
        (number)
        (number))
       (number))
      (currency))))

=====
Balance with tolerance
=====

2012-12-12 balance Assets:Test 20 ~ 50.00 EUR

---

(beancount_file
 (balance
  (date)
  (account)
  (amount_with_tolerance
   (number)
   (number)
   (currency))))

=====
Balances with Unicode accounts
=====

2012-12-12 balance Assets:Täaest 50 EUR
2012-12-12 balance Ässets:Öest 1 EUR

---

(beancount_file
 (balance
  date: (date)
  account: (account)
  amount: (amount
      (number)
      (currency)))
 (balance
  date: (date)
  account: (account)
  amount: (amount
      (number)
      (currency))))
