corpus/directives.txt
================================================================================
Commodity
================================================================================

2012-12-12 commodity EUR

--------------------------------------------------------------------------------

(beancount_file
  (commodity
    date: (date)
    currency: (currency)))

================================================================================
Close
================================================================================

2012-12-12 close Assets:Test
2012-12-12 close Assets:Äeäæœëgþst

--------------------------------------------------------------------------------

(beancount_file
  (close
    date: (date)
    account: (account))
  (close
    date: (date)
    account: (account)))

================================================================================
Custom
================================================================================

2012-12-12 custom "test" "string" Account:Name
    
2012-12-12 custom "test" "string" Account:Name

--------------------------------------------------------------------------------

(beancount_file
  (custom
    date: (date)
    name: (string)
    (string)
    (account))
  (custom
    date: (date)
    name: (string)
    (string)
    (account)))

================================================================================
Document
================================================================================

2012-12-12 document Assets:Test "Test.pdf"
2033-12-12 document Assets:Äeäæœëgþst "/home/test/a-file.pdf"

--------------------------------------------------------------------------------

(beancount_file
  (document
    date: (date)
    account: (account)
    filename: (string))
  (document
    date: (date)
    account: (account)
    filename: (string)))

================================================================================
Event
================================================================================

2012-12-12 event "test" "asdf"

--------------------------------------------------------------------------------

(beancount_file
  (event
    date: (date)
    type: (string)
    description: (string)))

================================================================================
Open
================================================================================

2012-12-12 open Assets:Test
2012-12-12 open Assets:Test USD, EUR "string"
2012-12-12 open Assets:Test "string"

--------------------------------------------------------------------------------

(beancount_file
  (open
    date: (date)
    account: (account))
  (open
    date: (date)
    account: (account)
    currencies: (currency_list
      (currency)
      (currency))
    booking: (string))
  (open
    date: (date)
    account: (account)
    booking: (string)))

================================================================================
Pad
================================================================================

2012-12-12 pad Assets:Äeäæœëgþst Assets:Äeäæœëgþst

--------------------------------------------------------------------------------

(beancount_file
  (pad
    (date)
    (account)
    (account)))

================================================================================
Query
================================================================================

2012-12-12 query "test" "test"

--------------------------------------------------------------------------------

(beancount_file
  (query
    date: (date)
    name: (string)
    query: (string)))

================================================================================
Note
================================================================================

2012-12-12 note Assets:Äeäæœëgþst "test"

--------------------------------------------------------------------------------

(beancount_file
  (note
    (date)
    (account)
    (string)))
