corpus/transactions.txt
=====
Simple transactions
=====

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  -30.00 USD

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test

---

(beancount_file
 (transaction
  date: (date)
  flag: (flag)
  txn_strings: (txn_strings (string))
  postings:
  (postings
   (posting
    account: (account)
    amount: (incomplete_amount (number) (currency)))
   (posting
    account: (account)
    amount: (incomplete_amount (unary_num_expr (number)) (currency)))))
 (transaction
  date: (date)
  flag: (flag)
  txn_strings: (txn_strings (string))
  postings:
  (postings
   (posting
    account: (account)
    amount: (incomplete_amount (number) (currency)))
   (posting
    account: (account)))))

=====
Transaction
=====

2012-12-12 * "asdf"
    Assets:Test  30.00 EUR
    Assets:Test  30.00
    Assets:Test  30.00 {}
    Assets:Test  EUR {}
    Assets:Test  EUR
    Assets:Test

---

(beancount_file
 (transaction
  date: (date)
  flag: (flag)
  txn_strings: (txn_strings (string))
  postings:
  (postings
   (posting
    account: (account)
    amount: (incomplete_amount (number) (currency)))
   (posting
    account: (account)
    amount: (incomplete_amount (number)))
   (posting
    account: (account)
    amount: (incomplete_amount (number))
    cost_spec: (cost_spec))
   (posting
    account: (account)
    amount: (incomplete_amount (currency))
    cost_spec: (cost_spec))
   (posting
    account: (account)
    amount: (incomplete_amount (currency)))
   (posting
    account: (account)))))
